app/src/main/java/com/example/projetocapacitacao/view/CameraActivity.kt
package com.example.projetocapacitacao.view

import android.app.Activity
import android.content.Intent
import android.content.pm.PackageManager
import androidx.appcompat.app.AppCompatActivity
import android.os.Bundle
import android.widget.Toast
import androidx.core.app.ActivityCompat
import androidx.core.content.ContextCompat
import com.budiyev.android.codescanner.AutoFocusMode
import com.budiyev.android.codescanner.CodeScanner
import com.budiyev.android.codescanner.DecodeCallback
import com.budiyev.android.codescanner.ErrorCallback
import com.budiyev.android.codescanner.ScanMode
import com.example.projetocapacitacao.databinding.ActivityCameraBinding
import com.example.projetocapacitacao.helper.Constants
import com.example.projetocapacitacao.view.fragments.DetailsFragment

private const val CAMERA_REQUEST_CODE = 101

class CameraActivity : AppCompatActivity() {

    private lateinit var binding: ActivityCameraBinding
    private lateinit var codeScanner: CodeScanner

    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        binding = ActivityCameraBinding.inflate(layoutInflater)
        setContentView(binding.root)

        setUpPermissions()
        setCodeScanner()
    }

    override fun onPause() {
        codeScanner.releaseResources()
        super.onPause()
    }

    override fun onRequestPermissionsResult(requestCode: Int, permissions: Array<out String>,
        grantResults: IntArray) {
        super.onRequestPermissionsResult(requestCode, permissions, grantResults)
        when(requestCode){
            CAMERA_REQUEST_CODE -> {
                if(grantResults.isEmpty() || grantResults[0] != PackageManager.PERMISSION_GRANTED){
                    Toast.makeText(this, Constants.CAMERA.PERMISSION_NEEDED,
                        Toast.LENGTH_SHORT).show()
                    finish()
                }
            }
        }
    }

    private fun setCodeScanner(){
        codeScanner = CodeScanner(this, binding.scannerQr)

        codeScanner.apply {
            camera = CodeScanner.CAMERA_BACK
            formats = CodeScanner.ALL_FORMATS
            autoFocusMode = AutoFocusMode.SAFE
            scanMode = ScanMode.CONTINUOUS
            isAutoFocusEnabled = true
            isFlashEnabled = false

            decodeCallback = DecodeCallback {
                runOnUiThread{
                    val intent = Intent()
                    intent.putExtra(Constants.GENERAL.ID_USER, it.text)
                    setResult(Activity.RESULT_OK, intent)
                    finish()
                }
            }

            errorCallback = ErrorCallback {
                runOnUiThread {
                    //error
                }
            }
        }

        codeScanner.startPreview()
    }

    private fun setUpPermissions(){
        val permission = ContextCompat.checkSelfPermission(this,
        android.Manifest.permission.CAMERA)

        if(permission != PackageManager.PERMISSION_GRANTED){
            makeRequest()
        }
    }

    private fun makeRequest(){
        ActivityCompat.requestPermissions(this, arrayOf(android.Manifest.permission.CAMERA),
            CAMERA_REQUEST_CODE)
    }

}